0029894: Visualization - AIS_ColorScale ColorRange returns only min color

A typo in AIS_ColorScale::ColorRange function has been fixed.